# arch-ide

./: .gitignore  .vercelignore  BIP322_FIX_SUMMARY.md  vercel.json
backend/: .env.yaml  Cargo.toml  Dockerfile  Dockerfile.compiler  cloudbuild.yaml  package-lock.json  package.json  tsconfig.json
backend/crates/program/src/: program_stubs.rs  pubkey.rs  system_instruction.rs
backend/crates/program/src/syscalls/: definitions.rs
backend/crates/sdk/: Cargo.toml
backend/crates/sdk/src/: runtime_transaction.rs
backend/programs/: Cargo.toml
backend/programs/default/src/: lib.rs
backend/src/: index.ts  main.rs
backend/src/models/: Project.ts
backend/src/routes/: compile.ts  deploy.ts
backend/src/services/: compiler.ts  idl-generator.ts
backend/src/types/: idl.ts  tree-sitter-rust.d.ts  tree-sitter.d.ts
backend/src/utils/: arch-program-loader.ts  transaction-utils.ts  types.ts
crates/bip322/: Cargo.toml
crates/bip322/src/: lib.rs
crates/program/: Cargo.toml
crates/program/src/: message.rs  program.rs  sanitized.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: constants.rs
deploy/aws/: build_push.sh  deploy_all.sh  deploy_async_build.sh  sync_frontend.sh
deploy/aws/terraform/: main.tf  variables.tf
deploy/aws/terraform-certs/: main.tf  variables.tf
deploy/aws/terraform-cf-alias/: main.tf  variables.tf
deploy/aws/terraform-frontend/: main.tf  variables.tf  versions.tf
deploy/aws/terraform/modules/cert-dns/: main.tf  variables.tf  versions.tf
frontend/: .eslintrc.js  .vercelignore  BITCOIN_WALLET_INTEGRATION.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/api/: proxy.ts
frontend/pages/api/bitcoin/: rpc.ts
frontend/public/crates/: alloc.rs  core.rs  std.rs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/bitcoin/: rpc.ts
frontend/src/components/: AuthorityAccountPanel.tsx  BrowserCompatibilityAlert.tsx  BuildPanel.tsx  ConfigPanel.tsx  ConnectionErrorModal.tsx  ConnectionModal.tsx  ConnectionStatus.tsx  DeleteProjectDialog.tsx  DeploymentModal.tsx  Editor.tsx  ErrorBoundary.tsx  FileExplorer.tsx  FormatToggleInput.tsx  HomeScreen.tsx  Identicon.tsx  IdlPanel.tsx  NewItemDialog.tsx  NewKeypairDialog.tsx  NewProjectDialog.tsx  Output.tsx  ProjectList.tsx  RenameDialog.tsx  ResizeHandle.tsx  SidePanel.tsx  StatusBar.tsx  StepCard.tsx  TabBar.tsx  Toolbar.tsx  TutorialInitializer.tsx  TutorialOverlay.tsx  VerticalResizeHandle.tsx  WelcomeModal.tsx
frontend/src/components/BitcoinWallet/: WalletButton.tsx  index.ts
frontend/src/components/ui/: toggle-group.tsx
frontend/src/context/: TutorialContext.tsx
frontend/src/editor/: declarations.ts
frontend/src/hooks/: useBitcoinWallet.ts
frontend/src/services/: MonacoFileSystem.ts  VirtualFileSystem.ts  compiler.ts  exampleProjectsService.ts  github.ts  projectService.ts  storage.ts
frontend/src/styles/: GlobalStyles.tsx  global.css
frontend/src/theme/: ThemeContext.tsx  ThemeProvider.tsx  theme.ts  types.ts
frontend/src/types/: config.ts  env.d.ts  global.d.ts  html.d.ts  idl.ts  index.ts  output.ts  project.ts  types.ts  wallet.ts  window.d.ts
frontend/src/utils/: RpcConnection.ts  arch-program-loader.ts  arch-sdk-deployer.ts  archPgClient.ts  base58.ts  bitcoin-signer.ts  client-transaction-signer.ts  errorFormatter.ts  explorerLinks.ts  faucet.ts  homeTab.ts  keypairGenerator.ts  smartRpcConnection.ts  storage.ts  text.ts  transaction-signer.ts
frontend/src/utils/__tests__/: bip322-signature.test.ts  test-bip322.ts
frontend/src/utils/wallet/: walletManager.ts
frontend/src/utils/wallet/adapters/: unisat.ts  xverse.ts
frontend/src/workers/: clientWorker.ts
frontend/wasm/rust-analyzer/: Cargo.toml
frontend/wasm/rust-analyzer/src/: lib.rs
programs/: Cargo.toml
programs/a45f8248-ef2c-42b8-bf49-b3dd3607ed21/: Cargo.toml
programs/a45f8248-ef2c-42b8-bf49-b3dd3607ed21/src/: lib.rs
rust-server/: .dockerignore  .gcloudignore  Cargo.toml  Dockerfile  cloudbuild.yaml  docker-compose.yml
rust-server/.cargo/: config.toml
rust-server/crates/program/: Cargo.toml
rust-server/crates/program/src/: helper.rs  lib.rs
rust-server/src/: build_tracker.rs  config.rs  error.rs  log.rs  main.rs  program.rs  test_bip322.rs
rust-server/src/middlewares/: mod.rs
rust-server/src/routes/: build.rs  deploy.rs  mod.rs  rpc_proxy.rs
(+6 files in other folders)
