[package]
name = "arch-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
dotenv = "0.15.0"
http = "1.0.0"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["compression-br", "cors", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
cloud-storage = "0.11.1"
base64 = "0.21.7"