[package]
name = "arch_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.5.3"
hex = "0.4.3"
memoffset = "0.9.1"
rustversion = "1.0.0"
thiserror = "2.0.3"
bitcoin = { version = "0.32.3", features = ["serde", "rand"] }
sha256 = "1.5.0"
serde = "1.0.136"

[dev-dependencies]
proptest = "1.5.0"
rand = "0.8.5"