[package]
name = "helloworld__1_"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
arch_program = "0.3.2"

# Core serialization/encoding
borsh = "=1.5.1"
base64 = { version = "=0.22.1", default-features = false, features = ["alloc"] }
hex = { version = "=0.4.3", default-features = false }
sha256 = { version = "=1.5.0", default-features = false }

# Error handling
thiserror = "=1.0.50"

# Serialization
serde = { version = "=1.0.198", features = ["derive"], default-features = false }

# Explicitly pin bytemuck and bytemuck_derive to versions that work with rustc 1.75.0-dev
bytemuck = { version = "=1.14.0", features = ["derive"] }
bytemuck_derive = "=1.5.0"

[profile.release]
overflow-checks = true
incremental = true
codegen-units = 256
opt-level = 1
lto = false
debug = false

[profile.release.build-override]
opt-level = 1
incremental = true
codegen-units = 256
