[package]
name = "rust-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
serde-wasm-bindgen = "0.6"
once_cell = "1.19"
regex = "1.10"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "-g"]
